--- a/index.html
+++ b/index.html
@@ -4,15 +4,58 @@
         <title>Survey Form</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
-    </head>
+    </head>    
     <body>
-        <header>
+        <div class="container">
+            <header>
+                <h1 id="title">Formulário de pesquisa</h1>
+                <p id="description">Obrigado por dedicar um tempo pra ajudar
+                a gente a melhorar a plataforma!!!
+                </p>
+            </header>
+            <form id="survey-form">
+                <div class="form-group">
+                    <label id="name-label" for="name">Nome</label>
+                    <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    class="form-control"
+                    placeholder="Insira seu nome"
+                    required
+                    />
+                </div>
+                <div class="form-group">
+                    <label id="email" for="email">Email</label>
+                    <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    class="form-control"
+                    placeholder="Insira seu email"
+                    required
+                    />
+                </div>
+                <div class="form-group">
+                    <label id="number-label" for="number">Age<span class="clue"
+                    >(optional)</span>
+                    </label>
+                    <input
+                    type="number"
+                    name="age"
+                    id="number"
+                    min="10"
+                    max="99"
+                    class="form-control"
+                    placeholder="Idade"
+                    />                    
+                </div>
+            </form>
 
-        </header>
 
+            <main>
 
-        <main>
-
-        </main>
-    </body>
+            </main>
+        </div>
+    </body>    
 </html>
