--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p id="description">Obrigado por dedicar um tempo pra ajudar
                 a gente a melhorar a plataforma!!!
                 </p>
-            </header>
+            </header>            
             <form id="survey-form">
                 <div class="form-group">
                     <label id="name-label" for="name">Nome</label>
@@ -37,8 +37,8 @@
                     />
                 </div>
                 <div class="form-group">
-                    <label id="number-label" for="number">Age<span class="clue"
-                    >(optional)</span>
+                    <label id="number-label" for="number">Idade<span class="clue"
+                    >(opcional)</span>
                     </label>
                     <input
                     type="number"
@@ -50,11 +50,169 @@
                     placeholder="Idade"
                     />                    
                 </div>
+                <div class="form-group">
+                    <p>Qual das opções descreve melhor sua atual situação?</p>
+                    <select id="dropdown" name="role" class="form-control" required>
+                        <option disabled selected value>Selecione sua posição atual</option>
+                        <option value="student">Estudante</option>
+                        <option value="job">Trabalho full-time</option>
+                        <option value="learner">Aprendiz full-time</option>
+                        <option value="preferNo">Prefiro não revelar</option>
+                        <option value="other">Outro</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <p>Você recomendaria a freeCodeCamp a um amigo?</p>
+                    <label>
+                        <input
+                        name="user-recommend"
+                        value="definitely"
+                        type="radio"
+                        class="input-radio"
+                        checked
+                        />Definitivamente
+                    </label>
+                    <label>
+                        <input
+                        name="user-recommend"
+                        value="maybe"
+                        type="radio"
+                        class="input-radio"
+                        />Talvez
+                    </label>
+                    <label>
+                        <input
+                        name="user-recommend"
+                        value="not-sure"
+                        type="radio"
+                        class="input-radio"
+                        />Não tenho certeza
+                    </label>
+                </div>
+                <div class="form-group">
+                    <p>
+                        Qual recurso você mais gosta na freeCodeCamp?
+                    </p>
+                    <select id="most-like" name="mostLike" class="form-control" required>
+                        <option disabled selected value>Selecione uma opção</option>
+                        <option value="challenges">Desafios</option>
+                        <option value="projects">Projetos</option>
+                        <option value="community">Comunidade</option>
+                        <option value="openSource">Open Source</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <p>
+                        O que você gostaria que fosse melhorado?
+                        <span class="clue">(Marque todos que se aplicam)</span>
+                    </p>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="front-end-projects"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Projetos front-end
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="back-end-projects"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Projetos back-end
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="data-visualization"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Visualização de Dados
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="challenges"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Desafios
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="open-source-community"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Comunidade open source
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="gitter-help-rooms"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Salas de ajuda gitter
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="videos"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Vídeos
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="city-meetups"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Encontros IRL
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="wiki"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Wiki
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="forum"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Fórum
+                    </label>
+                    <label>
+                        <input
+                        name="prefer"
+                        value="additional-courses"
+                        type="checkbox"
+                        class="input-checkbox"
+                        />Cursos adicionais
+                    </label>
+                </div>
+
+                <div class="form-group">
+                    <p>Algum comentário ou sugestão?</p>
+                    <textarea
+                    id="comments"
+                    class="input-textarea"
+                    name="comment"
+                    placeholder="Insira seu comentário..."
+                    ></textarea>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" id="submit" class="submit-buttom">
+                        Enviar
+                    </button>
+                </div>
             </form>
-
-
             <main>
-
             </main>
         </div>
     </body>    
