--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <div class="container">
             <header>
-                <h1 id="title">Formulário de pesquisa</h1>
-                <p id="description">Obrigado por dedicar um tempo pra ajudar
+                <h1 id="title" class="text-center">Formulário de pesquisa</h1>
+                <p id="description" class="description text-center">Obrigado por dedicar um tempo pra ajudar
                 a gente a melhorar a plataforma!!!
                 </p>
             </header>            
@@ -51,7 +51,7 @@
                     />                    
                 </div>
                 <div class="form-group">
-                    <p>Qual das opções descreve melhor sua atual situação?</p>
+                    <p class="adjust-text">Qual das opções descreve melhor sua atual situação?</p>
                     <select id="dropdown" name="role" class="form-control" required>
                         <option disabled selected value>Selecione sua posição atual</option>
                         <option value="student">Estudante</option>
@@ -62,7 +62,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <p>Você recomendaria a freeCodeCamp a um amigo?</p>
+                    <p class="adjust-text">Você recomendaria a freeCodeCamp a um amigo?</p>
                     <label>
                         <input
                         name="user-recommend"
@@ -90,7 +90,7 @@
                     </label>
                 </div>
                 <div class="form-group">
-                    <p>
+                    <p class="adjust-text">
                         Qual recurso você mais gosta na freeCodeCamp?
                     </p>
                     <select id="most-like" name="mostLike" class="form-control" required>
@@ -102,7 +102,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <p>
+                    <p class="adjust-text">
                         O que você gostaria que fosse melhorado?
                         <span class="clue">(Marque todos que se aplicam)</span>
                     </p>
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="form-group">
-                    <p>Algum comentário ou sugestão?</p>
+                    <p class="adjust-text">Algum comentário ou sugestão?</p>
                     <textarea
                     id="comments"
                     class="input-textarea"
