--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     />
                 </div>
                 <div class="form-group">
-                    <label id="email" for="email">Email</label>
+                    <label id="email-label" for="email">Email</label>
                     <input
                     type="email"
                     name="email"
